--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="page">
     <header class="matrix">
-      <img class="matrix__img" src="./eisenhower-matrix.jpg">
+      <img class="matrix__img" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
       <a class="matrix__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="container">
@@ -27,7 +27,7 @@
             <input class="item__task text input" type="text">
             <button class="item__edit-btn btn">Edit</button>
             <button class="delete btn">
-              <img class="delete__img" src="./remove.svg">
+              <img class="delete__img" src="./remove.svg" alt="Remove task">
             </button>
           </li>
           <li class="item item_todo item_edit">
@@ -36,7 +36,7 @@
             <input class="item__task text input" type="text" value="Go Shopping">
             <button class="item__edit-btn btn">Save</button>
             <button class="delete btn">
-              <img class="delete__img" src="./remove.svg">
+              <img class="delete__img" src="./remove.svg" alt="Remove task">
             </button>
           </li>
         </ul>
@@ -50,7 +50,7 @@
             <input class="item__task text input" type="text">
             <button class="item__edit-btn btn">Edit</button>
             <button class="delete btn">
-              <img class="delete__img" src="./remove.svg">
+              <img class="delete__img" src="./remove.svg" alt="Remove task">
             </button>
           </li>
         </ul>
